**Releases:

v7.x-1.2
---------
- Security update: access controle implemented
- Update in block; hide als er geen items zijn

v7.x-1.1
---------
- Beter block definitie

v7.x-1.0
---------
- First initial release


**Unreleased:
(check also forum, blog and projectstatus - issues and tickets)