@@ -2,7 +2,7 @@ name = AZ-index
 description = Het menu "Modules" wordt omgezet in een AZ-index, waarbij alle items alfabetisch worden getoond in een block.
 core = 7.x
 package = argus - a Quality control extension
-version = 7.x-1.2
+version = 7.x-1.3
 core = 7.x
 project = argus_azindex
 datestamp = 1462924800
