@@ -4,7 +4,7 @@ package = argus - a Quality control extension
 php = 5.2
 configure = admin/config/argus
 configure = admin/config/argus/engine
-version = 7.x-1.6
+version = 7.x-1.7
 core = 7.x
 project = argus_engine
 datestamp = 1426017016
