@@ -1,5 +1,9 @@
 **Releases:
 
+v7.x-1.7
+---------
+- Caching enabled
+
 v7.x-1.6
 ---------
 - Nieuwe function om variabelen te exporteren voor install profile scripts
