@@ -1,5 +1,9 @@
 **Releases:
 
+v7.x-4.2
+---------
+- Cache enabled
+
 v7.x-4.1
 ---------
 - Fix in user redirection unauthorized to login
